fixing code overflow on code blocks

--- a/css/main.css
+++ b/css/main.css
@@ -46,3 +46,15 @@ div.highlight code {
     
     font-size: 1.3em;
 }
+
+.highlighter-rouge  code * {
+    white-space: nowrap;
+}
+
+.highlighter-rouge pre {
+    overflow-x: auto;
+}
+
+.highlighter-rouge pre code {
+    white-space: pre;
+}
